--- a/index.html
+++ b/index.html
@@ -7,45 +7,53 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #2c2c2c;
-            color: #cccccc;
+            background-color: #1e1e1e;
+            color: #ffffff;
             margin: 0;
             padding: 0;
         }
+
         header {
-            background-color: #1f1f1f;
+            background-color: #2c2f33;
             padding: 20px 0;
             text-align: center;
-            border-bottom: 2px solid #444444;
+            border-bottom: 2px solid #7289da;
         }
+
         header h1 {
             margin: 0;
             font-size: 3em;
             color: #7289da;
         }
+
         header p {
             font-size: 1.2em;
         }
+
         .content {
             max-width: 1200px;
             margin: 20px auto;
             padding: 0 20px;
         }
+
         .section {
-            background-color: #333333;
+            background-color: #23272a;
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
         .section h2 {
             color: #61dafb;
             border-bottom: 2px solid #61dafb;
             padding-bottom: 10px;
         }
+
         .section p {
             line-height: 1.6;
         }
+
         .button {
             display: inline-block;
             background-color: #7289da;
@@ -56,51 +64,37 @@
             transition: background-color 0.3s ease;
             margin-top: 10px;
         }
+
         .button:hover {
             background-color: #5b6eae;
         }
+
         .announcements {
-            background-color: #1f1f1f;
+            background-color: #2c2f33;
             border-left: 5px solid #61dafb;
             padding: 15px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
         }
-        .tab {
-            display: inline-block;
-            margin-right: 10px;
-            cursor: pointer;
-            padding: 10px 20px;
-            background-color: #333333;
-            color: #cccccc;
-            border-radius: 5px 5px 0 0;
-            border: 1px solid #444444;
-        }
-        .tab:hover {
-            background-color: #444444;
-        }
-        .tab-content {
-            display: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
+
         footer {
-            background-color: #1f1f1f;
+            background-color: #2c2f33;
             text-align: center;
             padding: 20px;
-            border-top: 2px solid #444444;
+            border-top: 2px solid #7289da;
         }
+
         footer p {
             margin: 0;
             font-size: 0.9em;
-            color: #cccccc;
         }
+
         @media (max-width: 768px) {
             header h1 {
                 font-size: 2.5em;
             }
+
             .section {
                 padding: 15px;
             }
@@ -115,59 +109,41 @@
     </header>
     <div class="content">
         <div class="section">
-            <div class="tab" onclick="openTab('discord')">Discord</div>
-            <div class="tab" onclick="openTab('minecraft')">Minecraft</div>
-            <div id="discord" class="tab-content active">
-                <h2>Dołącz do nas na Discordzie</h2>
-                <p>Dołącz do naszej społeczności na Discordzie, aby być na bieżąco z wydarzeniami, znajdować nowych przyjaciół do gry i korzystać z różnych kanałów tematycznych.</p>
-                <a href="https://discord.gg/twoj-link" class="button">Dołącz do Discorda</a>
-            </div>
-            <div id="minecraft" class="tab-content">
-                <h2>Minecraft</h2>
-                <p>Premiera: Nieznana</p>
-                <p>Serwer Minecraft Black House jest obecnie w fazie rozwoju. Będziemy informować o dacie premiery na naszym Discordzie.</p>
-            </div>
+            <h2>O nas</h2>
+            <p>Black House to społeczność graczy, którzy łączą się na naszym serwerze Discord, aby wspólnie grać, rozmawiać i bawić się.</p>
         </div>
         <div class="section">
             <h2>Ogłoszenia</h2>
             <div id="announcements" class="announcements">
-                <p>Ładowanie ogłoszeń...</p>
+                Ładowanie ogłoszeń...
             </div>
         </div>
         <div class="section">
-            <h2>O nas</h2>
-            <p>Black House to społeczność graczy, którzy łączą się na naszym serwerze Discord, aby wspólnie grać, rozmawiać i bawić się.</p>
+            <h2>Dołącz do nas na Discordzie</h2>
+            <p>Dołącz do naszej społeczności na Discordzie, aby być na bieżąco z wydarzeniami, znajdować nowych przyjaciół do gry i korzystać z różnych kanałów tematycznych.</p>
+            <a href="https://discord.gg/twoj-link" class="button">Dołącz do Discorda</a>
         </div>
+        <footer>
+            <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone.</p>
+        </footer>
     </div>
-    <footer>
-        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone.</p>
-    </footer>
+
     <script>
         async function loadAnnouncements() {
             try {
-                const response = await fetch('ogloszenia.md');
+                const response = await fetch('ogloszenia.txt');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
                 const text = await response.text();
-                document.getElementById('announcements').innerHTML = marked(text);
+                const markdownText = marked(text);
+                document.getElementById('announcements').innerHTML = markdownText;
             } catch (error) {
-                document.getElementById('announcements').innerHTML = 'Nie udało się załadować ogłoszeń.';
+                document.getElementById('announcements').innerHTML = 'Nie udało się załadować ogłoszeń: ' + error.message;
                 console.error('Fetch error:', error);
             }
         }
         document.addEventListener('DOMContentLoaded', loadAnnouncements);
-
-        function openTab(tabName) {
-            const tabs = document.querySelectorAll('.tab-content');
-            tabs.forEach(tab => {
-                if (tab.id === tabName) {
-                    tab.classList.add('active');
-                } else {
-                    tab.classList.remove('active');
-                }
-            });
-        }
     </script>
 </body>
 </html>
