--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <h2>Discord</h2>
                 <p>Dołącz do naszej społeczności na Discordzie, aby być na bieżąco z wydarzeniami, znajdować nowych
                     przyjaciół do gry i korzystać z różnych kanałów tematycznych.</p>
-                <a href="https://discord.gg/twoj-link" class="button">Dołącz do Discorda</a>
+                <a href="https://discord.gg/emMNqagfEZ" class="button">Dołącz do Discorda</a>
             </div>
         </div>
         <div id="tab-4" class="tab-content">
