--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone. Właścicielem strony jest Z1emniakPL.</p>
     </footer>
 
     <script>
