--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         header h1 {
             margin: 0;
             font-size: 3em;
-            color: #7289da;
+            color: #ffffff;
         }
 
         header p {
