--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #1e1e1e;
-            color: #ffffff;
+            background-color: #1e1e1e; /* Głęboki czarny */
+            color: #ffffff; /* Biały tekst */
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #2c2f33;
+            background-color: #2c2c2c; /* Ciemny szary */
             padding: 20px 0;
             text-align: center;
-            border-bottom: 2px solid #7289da;
+            border-bottom: 2px solid #7289da; /* Jasny niebieski */
         }
 
         header h1 {
             margin: 0;
             font-size: 3em;
-            color: #ffffff;
+            color: #ffffff; /* Biały tekst */
         }
 
         header p {
@@ -38,7 +38,7 @@
         }
 
         .section {
-            background-color: #23272a;
+            background-color: #333333; /* Ciemny szary */
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
@@ -46,8 +46,8 @@
         }
 
         .section h2 {
-            color: #61dafb;
-            border-bottom: 2px solid #61dafb;
+            color: #7289da; /* Jasny niebieski */
+            border-bottom: 2px solid #7289da; /* Jasny niebieski */
             padding-bottom: 10px;
         }
 
@@ -57,8 +57,8 @@
 
         .button {
             display: inline-block;
-            background-color: #7289da;
-            color: #ffffff;
+            background-color: #7289da; /* Jasny niebieski */
+            color: #ffffff; /* Biały tekst */
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
@@ -67,17 +67,17 @@
         }
 
         .button:hover {
-            background-color: #5b6eae;
+            background-color: #5b6eae; /* Ciemniejszy odcień niebieskiego */
         }
 
         .announcements {
-            background-color: #2c2f33;
-            border-left: 5px solid #61dafb;
+            background-color: #333333; /* Ciemny szary */
+            border-left: 5px solid #7289da; /* Jasny niebieski */
             padding: 15px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
-            color: #ffffff;
+            color: #ffffff; /* Biały tekst */
         }
 
         .tabs {
@@ -91,23 +91,23 @@
             margin-right: 10px;
             cursor: pointer;
             padding: 10px 20px;
-            background-color: #7289da;
+            background-color: #7289da; /* Jasny niebieski */
             border-radius: 5px 5px 0 0;
             transition: background-color 0.3s ease;
         }
 
         .tabs li:hover,
         .tabs li.active {
-            background-color: #5b6eae;
+            background-color: #5b6eae; /* Ciemniejszy odcień niebieskiego */
         }
 
         .tab-content {
             display: none;
-            background-color: #2c2f33;
+            background-color: #333333; /* Ciemny szary */
             padding: 20px;
             border-radius: 0 0 8px 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            color: #ffffff;
+            color: #ffffff; /* Biały tekst */
         }
 
         .tab-content.active {
@@ -115,11 +115,11 @@
         }
 
         footer {
-            background-color: #2c2f33;
+            background-color: #2c2c2c; /* Ciemny szary */
             text-align: center;
             padding: 20px;
-            border-top: 2px solid #7289da;
-            color: #ffffff;
+            border-top: 2px solid #7289da; /* Jasny niebieski */
+            color: #ffffff; /* Biały tekst */
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -145,7 +145,7 @@
 
 <body>
     <header>
-        <h1>Black House</h1>
+        <h1 style="color: #000000;">Black House</h1>
         <p></p>
     </header>
     <div class="content">
@@ -190,7 +190,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone. Właścicielem strony jest Z1emniakPL.</p>
+        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone. Projekt i realizacja: Z1emniakPL.</p>
     </footer>
 
     <script>
