--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone. Projekt i realizacja: TwójNick.</p>
+        <p>&copy; 2024 Black House. Wszelkie prawa zastrzeżone. Projekt i realizacja: Z1emniakPL.</p>
     </footer>
 
     <script>
