--- a/rekrutacja.html
+++ b/rekrutacja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Środkowanie iframe</title>
+    <title>Rekrutacja na Trial Pomocnika - Black House</title>
     <style>
         body, html {
             height: 100%;
