--- a/rekrutacja.html
+++ b/rekrutacja.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScXGLBRWH6pHwpSeqP6LWSscBXdoz1Q0GSUOsXe-WTQAWIGnA/viewform?embedded=true" allowfullscreen></iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScXGLBRWH6pHwpSeqP6LWSscBXdoz1Q0GSUOsXe-WTQAWIGnA/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
 </body>
 </html>
